objects/DMAPP__DM_DVLS_Answer__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the eLearning candidate answers to questions. These can accessed as a detail section on the Test Questions page.</description>
    <fields>
        <fullName>DMAPP__Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_DVLS_Question__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Dealmaker Question</label>
        <referenceTo>DMAPP__DM_DVLS_Question__c</referenceTo>
        <relationshipLabel>Test Question Answers</relationshipLabel>
        <relationshipName>DM_DVLS_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Test Question Answer</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Question Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Question Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>